dns.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-dns
  namespace: pihole
spec:
  selector:
    app: pihole
  type: NodePort
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns
    - protocol: TCP
      port: 53
      targetPort: 53
      name: tcp
