tcp.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-tcp
  namespace: pihole
spec:
  selector:
    app: pihole
  type: NodePort
  ports:
  - name: web
    port: 80
    protocol: TCP
