udp.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole"
spec:
  selector:
    app: pihole
  type: LoadBalancer
  externalIPs:
  - 192.168.0.64
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns
