ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: pihole
   namespace: pihole
spec:
  rules:
  - http:
     paths:
     - path: /admin
       backend:
         serviceName: pihole-service-tcp
         servicePort: 80
